fix(frontend): prevent clipping of bg
Darbar sahib theme when used in wider than 16:9 would clip on the edges. This 10% zoom should alleviate most common use cases.

--- a/app/frontend/src/themes/Darbar Sahib.css
+++ b/app/frontend/src/themes/Darbar Sahib.css
@@ -6,7 +6,7 @@
     /* Display background */
     --display-background-color: #0C297B;
     --display-background-image: url('/themes/images/darbar-sahib.jpg');
-    --display-background-size: auto 100%;
+    --display-background-size: auto 110%;
 
     /* Display line colours */
     --display-line-1-color: #ffffff;
